--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="sidebar">
 			<h3>Tentang Penulis</h3>
-			<img src="img/uzix.jpg" alt="uzix">
+			<img src="img/uzix.JPG" alt="uzix">
 			<p>Nama			: M Fauzi Habibi</p>
 			<p>Panggilan	: Uzix</p>
 			<p>Hobi			: MTB cycle</p>
@@ -48,7 +48,7 @@
 		
 	</div>
 	<div class="footer">
-		<p class="copy">Copyright 2015, uzix</p>
+		<p class="copy">Copyright 2023, uzix</p>
 	</div>
 </div>
 
