--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 	<a href="https://twitter.com/fauzihabibi005" class="twitter" target="_blank">@fauzihabibi005</a>
 	<div class="header">
-		<h1 class="judul">websitus pribadi</h1>
+		<h1 class="judul">Web Programming Uzix</h1>
 		<ul>
 			<li><a href="">home</a></li>
 			<li><a href="https://www.facebook.com/gotadaindonesia" target="_blank">Fun Page</a></li>
@@ -41,7 +41,7 @@
 			<p>Education	: Universitas Terbuka</p>
 			<p>Github		: https://github.com/fauzihabibi</p>
 			<ul>
-				<li><a href="https://github.com/fauzihabibi" target="_blank">https://github.com/fauzihabibi</a></li>
+				<li><a href="https://github.com/fauzihabibi" target="_blank">Github</a></li>
 				
 			</ul>
 		</div>
